...
        android:fontFamily="@font/urbanist_semibold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_add_story"
        android:layout_marginTop="30dp" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sw_current_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_current_location"
        app:layout_constraintBottom_toBottomOf="@id/tv_current_location"
        />
...
        android:layout_marginTop="10dp"
        android:alpha="0"
        tools:alpha="100"
        />

    <Button
        android:id="@+id/btn_gallery"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/bg_btn"
        android:text="@string/gallery"
        android:textColor="@color/base_color"
        android:fontFamily="@font/urbanist_semibold"
...
