<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.MainActivity"
    android:paddingHorizontal="30dp"
    android:paddingVertical="20dp"
    >

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tv_heading_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_header"
        android:textSize="28sp"
        android:fontFamily="@font/urbanist_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        android:layout_marginTop="50dp"
        android:alpha="0"
        tools:alpha="100"
        />

    <TextView
        android:id="@+id/tv_desc_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_description"
        android:textSize="16sp"
        android:textColor="@color/grey_color"
        android:fontFamily="@font/urbanist_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_heading_login"
        android:layout_marginTop="10dp"
        android:alpha="0"
        tools:alpha="100"
        />
    
    <TextView
        android:id="@+id/tv_label_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_email"
        android:textSize="14sp"
        android:fontFamily="@font/urbanist_semibold"
        android:textColor="@color/primary_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_desc_login"
        android:layout_marginTop="30dp"
        android:alpha="0"
        tools:alpha="100"
        />



    <com.example.story_dicoding.view.customview.ValidationEditText
        android:id="@+id/ed_login_email"
        android:hint="@string/hint_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/urbanist_regular"
        android:textSize="14sp"
        android:textColor="@color/black_color"
        android:textColorHint="@color/grey_color"
        android:background="@drawable/bg_et"
        android:drawableStart="@drawable/ic_mail"
        android:drawablePadding="10dp"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_label_email"
        android:layout_marginTop="10dp"
        android:alpha="0"
        tools:alpha="100"
        />

    <TextView
        android:id="@+id/tv_label_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_password"
        android:textSize="14sp"
        android:fontFamily="@font/urbanist_semibold"
        android:textColor="@color/primary_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_login_email"
        android:layout_marginTop="25dp"
        android:alpha="0"
        tools:alpha="100"
        />

    <com.example.story_dicoding.view.customview.ValidationEditText
        android:id="@+id/ed_login_password"
        android:hint="@string/hint_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/urbanist_regular"
        android:textSize="14sp"
        android:textColor="@color/black_color"
        android:textColorHint="@color/grey_color"
        android:background="@drawable/bg_et"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="10dp"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_label_password"
        android:layout_marginTop="10dp"
        android:alpha="0"
        tools:alpha="100"
        />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/base_color"
        android:fontFamily="@font/urbanist_semibold"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:background="@drawable/bg_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cl_navigate_to_register"
        android:layout_marginBottom="10dp"
        android:alpha="0"
        tools:alpha="100"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_navigate_to_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="20dp"
        >
        <TextView
            android:id="@+id/tv_navigate_to_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_register"
            android:textSize="14sp"
            android:textColor="@color/black_color"
            android:fontFamily="@font/urbanist_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:alpha="0"
            tools:alpha="100"

            />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="14sp"
            android:textColor="@color/primary_color"
            android:fontFamily="@font/urbanist_semibold"
            app:layout_constraintStart_toEndOf="@id/tv_navigate_to_register"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="5dp"
            android:alpha="0"
            tools:alpha="100"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@color/primary_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible"
        />

</androidx.constraintlayout.widget.ConstraintLayout>